src/objects/REVVY__MnQuote__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Growth_Factor_CAT__c</fullName>
        <description>Annual Growth Factor (%) for CAT</description>
        <label>Annual Growth Factor (%) - CAT</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Growth_Factor_CC__c</fullName>
        <description>Annual Growth Factor (%) for CC</description>
        <label>Annual Growth Factor (%) - CC</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Growth_Factor_IA__c</fullName>
        <description>Annual Growth Factor (%) for IA</description>
        <label>Annual Growth Factor (%) - IA</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Growth_Factor_TradIH__c</fullName>
        <description>Annual Growth Factor (%) for TradIH</description>
        <label>Annual Growth Factor (%) - TradIH</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Annual_Growth_Factor__c</fullName>
        <description>Annual Growth Factor (%)</description>
        <label>Annual Growth Factor (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <description>Account Billing Address from Account for which Quote has been created</description>
        <inlineHelpText>Account Billing Address from Account for which Quote has been created</inlineHelpText>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <description>Account Billing Country from Account for which Quote has been created</description>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAT_Price_Plan_Name__c</fullName>
        <description>The name of CAT price plan</description>
        <label>CAT Price Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_CCMS_Price_Plan_Name__c</fullName>
        <formula>OCD_CC_Price_List__r.CCMS_Price_Plan_Name__c</formula>
        <label>CC CCMS Price Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_CalsPerYear__c</fullName>
        <defaultValue>4</defaultValue>
        <label>CC Cals/Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_Price_Plan_Name__c</fullName>
        <description>The name of CC price plan</description>
        <label>CC Price Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_QC_LevelsPerDay__c</fullName>
        <defaultValue>2</defaultValue>
        <label>CC QC Levels/Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_DaysPerYear__c</fullName>
        <label>Calculated Days/Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cassettes_BioVue_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cassettes - BioVue</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contract_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Manager</description>
        <label>Contract Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Revvy_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <description>Contract Number</description>
        <externalId>true</externalId>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Overall_GP_Diff__c</fullName>
        <label>Overall GP Diff</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <formula>REVVY__Account__r.Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysPerWeek__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Days/Week</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enhancement_Media_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Enhancement Media</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Get_Prices_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Prices Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Of_OperationPerDay__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Hours Of Operation/Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IA_Assay_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Assay Count</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IA_CalsPerYear__c</fullName>
        <defaultValue>13</defaultValue>
        <label>IA Cals/Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IA_Min_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IA Min Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IA_Price_Plan_Name__c</fullName>
        <label>IA Price Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA_QC_LevelsPerDay__c</fullName>
        <defaultValue>2</defaultValue>
        <label>IA QC Levels/Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_Type__c</fullName>
        <label>IDN Type</label>
        <picklist>
            <picklistValues>
                <fullName>All in One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Reagent Price</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Min_Discount__c</fullName>
        <label>Min Discount</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Months_Of_Patient_Data__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Months Of Patient Data</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MultiFamily__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User to check Multi Family Eligibility and check this box if Quote is eligible for Multi Family discount.</description>
        <inlineHelpText>Please check Multi Family Eligibility and check this box if Quote is eligible for Multi Family discount</inlineHelpText>
        <label>MultiFamily</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Analyzers__c</fullName>
        <label># Analyzers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_API_Applies_Volume_from_Year__c</fullName>
        <defaultValue>2</defaultValue>
        <label>Starting Year</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_API_Applies_from_Year__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The year of the contract from which the API applies</description>
        <inlineHelpText>The year of the contract from which the API applies</inlineHelpText>
        <label>Starting Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_API_Consumable_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Consumable Volume Increase</description>
        <label>Consumable Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Access_Others_IR_Type__c</fullName>
        <label>Accessories &amp; Others IR Type</label>
        <picklist>
            <picklistValues>
                <fullName>DBO</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>FMV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Annual_Growth_Applies_from_Year__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Year of contract  from which annual growth applies</description>
        <inlineHelpText>Year of contract  from which annual growth applies</inlineHelpText>
        <label>Annual Growth Applies from Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Annualized_Revenue__c</fullName>
        <label>Annualized Revenue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OCD_Apply_Managed_Services_Fee_to__c</fullName>
        <description>Product Types to which the Managed Services Fee</description>
        <inlineHelpText>Product Types to which the Managed Services Fee</inlineHelpText>
        <label>Apply Managed Services Fee to</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reagent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>OCD_Billing_ISO_Country_Code__c</fullName>
        <label>Billing ISO Country Code</label>
        <picklist>
            <picklistValues>
                <fullName>AD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BQ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_ABO_RH_Volume_Discount__c</fullName>
        <label>CAT ABO RH Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_API_Max__c</fullName>
        <label>CAT Reagents Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_API_Min__c</fullName>
        <label>CAT Reagents Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_API_Reagent_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CAT Reagent Volume API increase</description>
        <label>CAT Reagent Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_API__c</fullName>
        <description>API for CAT</description>
        <inlineHelpText>API for CAT</inlineHelpText>
        <label>CAT Reagents Quote</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Accessories_Discount__c</fullName>
        <description>CAT Accessories Discount</description>
        <label>CAT Accessories Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Consumable_Discount__c</fullName>
        <description>CAT Consumable Discount</description>
        <label>CAT Consumable Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Equipment_Discount__c</fullName>
        <description>CAT Equipment Discount</description>
        <label>CAT Equipment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_IgG_Volume_Discount__c</fullName>
        <description>CAT IgG Volume Discount</description>
        <label>CAT IgG Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Label__c</fullName>
        <label>CAT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Max_ABO_RH_Volume_Discount__c</fullName>
        <label>CAT Max ABO RH Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Max_Discount__c</fullName>
        <label>CAT Max Discount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Max_IgG_Volume_Discount__c</fullName>
        <label>CAT Max IgG Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Max_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canada CAT Max Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Min_ABO_RH_Volume_Discount__c</fullName>
        <label>CAT Min ABO RH Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Min_IgG_Volume_Discount__c</fullName>
        <label>CAT Min IgG Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Min_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canada CAT Min Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Other_Discount__c</fullName>
        <label>CAT Other Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAT Price Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Invalid CAT Price Plan. Please select valid CAT Price Plan.</errorMessage>
            <filterItems>
                <field>REVVY__MnPriceList__c.LOB__c</field>
                <operation>equals</operation>
                <value>CAT</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Is_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Country_applicability__c</field>
                <operation>equals</operation>
                <valueField>$Source.OCD_Billing_ISO_Country_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Cloning in progress..., Creating lines in progress..., Draft, Draft in progress..., Importing Quote Lines, Ready, Submitted, IDN_Completed, IDN_Error</value>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Ordered</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Revvy Quotes (CAT Price Plan)</relationshipLabel>
        <relationshipName>CAT_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Price_Plan_Id__c</fullName>
        <formula>OCD_CAT_Price_List__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAT Price Plan Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Service_Discount__c</fullName>
        <label>CAT Service Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Term_Disc_CCMS__c</fullName>
        <formula>(1 - ( OCD_CAT_Volume_Disc__c   +   OCD_Menu_Disc__c +  OCD_MultiFamily_Disc__c ))  *  OCD_Term_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAT Term Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CAT_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Canada CAT Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_API_Max__c</fullName>
        <label>CC Reagents Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_API_Min__c</fullName>
        <label>CC Reagents Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_API_Reagent_Volume__c</fullName>
        <defaultValue>0</defaultValue>
        <description>CC Reagent Volume API increase</description>
        <label>CC Reagent Volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_API__c</fullName>
        <description>API for CC</description>
        <inlineHelpText>API for CC</inlineHelpText>
        <label>CC Reagents Quote</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Accessories_Discount__c</fullName>
        <label>CC Accessories Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Assay_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CC Assay Count</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_CC_Assay_Count_CCMS__c</fullName>
        <formula>( 1 - OCD_CC_Volume_Disc__c ) *  OCD_CC_Assay_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC CC Assay Count CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Cardiac_Disc_CCMS__c</fullName>
        <description>CC Cardiac Discount Field to be sent to CCMS</description>
        <formula>( 1 -  OCD_CC_Volume_Disc__c )  *  OCD_Cardiac_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Cardiac Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Consumable_Discount__c</fullName>
        <label>CC Consumable Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Equipment_Discount__c</fullName>
        <label>CC Equipment Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_IA_Assay_Count_CCMS__c</fullName>
        <formula>( 1 - OCD_CC_Volume_Disc__c ) *  IA_Assay_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC IA Assay Count CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Label__c</fullName>
        <label>CC</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Max_Discount__c</fullName>
        <label>CC Max Discount</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Max_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CC Max Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Min_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CC Min Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_MultiFamily_Disc_CCMS__c</fullName>
        <formula>( 1 - OCD_CC_Volume_Disc__c ) *  OCD_MultiFamily_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC MultiFamily Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Other_Discount__c</fullName>
        <label>CC Other Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Price Plan</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3 AND 4) OR 5</booleanFilter>
            <errorMessage>Invalid CC Price Plan. Please select valid CC Price Plan</errorMessage>
            <filterItems>
                <field>REVVY__MnPriceList__c.LOB__c</field>
                <operation>equals</operation>
                <value>CC</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Is_Valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>REVVY__MnPriceList__c.Country_applicability__c</field>
                <operation>equals</operation>
                <valueField>$Source.OCD_Billing_ISO_Country_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Cloning in progress..., Creating lines in progress..., Draft, Draft in progress..., Importing Quote Lines, Ready, Submitted, IDN_Completed, IDN_Error</value>
            </filterItems>
            <filterItems>
                <field>$Source.REVVY__Status__c</field>
                <operation>equals</operation>
                <value>Ordered</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Revvy Quotes (CC Price Plan)</relationshipLabel>
        <relationshipName>CC_Price_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Price_Plan_Id__c</fullName>
        <formula>OCD_CC_Price_List__r.Id</formula>
        <label>CC Price Plan Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Reagent_Qty__c</fullName>
        <label>CC Reagent Qty</label>
        <summarizedField>REVVY__MnQuoteItem__c.REVVY__Quantity__c</summarizedField>
        <summaryForeignKey>REVVY__MnQuoteItem__c.REVVY__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Service_Discount__c</fullName>
        <label>CC Service Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Term_Disc_CCMS__c</fullName>
        <formula>( 1 - OCD_CC_Volume_Disc__c ) *  OCD_Term_Disc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Term Disc CCMS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Volume_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>CC Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CC_Volume_Discount_Id__c</fullName>
        <formula>OCD_CC_Price_List__r.Discount__r.Id</formula>
        <label>CC Volume Discount Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_CL_LOB_Discount__c</fullName>
        <description>Multi LOB Discount (CC &amp; IA) or (CAT &amp; Trad IH)</description>
        <label>Multi LOB Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CL_LOB_Max_Discount__c</fullName>
        <description>Multi LOB Max Discount (CC &amp; IA) or (CAT &amp; Trad IH)</description>
        <label>Multi LOB Max Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_CL_LOB_Min_Discount__c</fullName>
        <description>Multi LOB Min Discount (CC &amp; IA) or (CAT &amp; Trad IH)</description>
        <label>Multi LOB Min Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Cardiac_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cardiac Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Cards_IDMTS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cards</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Committed_Volume_Disc__c</fullName>
        <label>Canada Committed Volume Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Committed_Volume_Max_Disc__c</fullName>
        <label>Canada Committed Volume Max Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Committed_Volume_Min_Disc__c</fullName>
        <label>Canada Committed Volume Min Disc</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Consumables_API__c</fullName>
        <defaultValue>0</defaultValue>
        <description>API for all Consumables</description>
        <inlineHelpText>API for all Consumables</inlineHelpText>
        <label>Consumables API</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_Country_Number__c</fullName>
        <label>Country Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCD_Distributor_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCD Distributor Price List</label>
        <referenceTo>REVVY__MnPriceList__c</referenceTo>
        <relationshipLabel>Price Quotes (OCD Distributor Price List)</relationshipLabel>
        <relationshipName>Price_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price Quotes (Distributor)</relationshipLabel>
        <relationshipName>Price_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OCD_Document_Quote_Remarks__c</fullName>
        <description>Remarks or Special Instructions that will appear on Quote</description>
        <inlineHelpText>Remarks that will appear on Quote Document</inlineHelpText>
        <label>Quote Document Remarks</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OCD_Equipment_IR_Type__c</fullName>
        <label>Equipment IR Type</label>
        <picklist>
            <picklistValues>
                <fullName>FMV</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>DBO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCD_Exclude_Behavior_Discounts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this field is checked then behavior discounts are excluded for quote</description>
        <inlineHelpText>Check this if behavior discounts are not to be applied to quote</inlineHelpText>
        <label>Exclude Behavior Discounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OCD_GPO__c</fullName>
        <label>GPO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Globulin_Disc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Anti-Human Globulin</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_API_Max__c</fullName>
        <label>IA Reagents Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OCD_IA_API_Min__c</fullName>
        <label>IA Reagents Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>